feat: 增加互联网安全备案号

--- a/themes/landscape/layout/_partial/footer.ejs
+++ b/themes/landscape/layout/_partial/footer.ejs
@@ -7,6 +7,6 @@
       &copy; <%= date(new Date(), 'YYYY') %> <%= config.author || config.title %><br>
       <%= __('powered_by') %> <a href="http://hexo.io/" target="_blank">Hexo</a>
     </div>
-    <div>粤ICP备15015987号-1</div>
+    <div><%= config.ext.beian %> | <%= config.ext.icp %></div>
   </div>
 </footer>
